--- a/index.html
+++ b/index.html
@@ -12,3 +12,20 @@
   </div>
 </body>
 </html>
+
+{
+    "window.zoomLevel": 1,
+    "workbench.startupEditor": "newUntitledFile",
+    "explorer.compactFolders": false,
+    "workbench.iconTheme": "symbols",
+    "editor.fontSize": 14,
+    "workbench.colorTheme": "OM Theme (Night Owl Italic)",
+    "editor.fontFamily": "JetBrains Mono",
+    "terminal.integrated.fontFamily": "monospace",
+    "symbols.hidesExplorerArrows": false,
+    "editor.renderLineHighlight": "gutter",
+    "editor.lineHeight": 1.8,
+    "editor.fontLigatures": true, 
+    "breadcrumbs.enabled": false,
+    "editor.minimap.enabled": false,
+} 
